chore: add package name

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "bugsplat-git/stage-php",
     "description": "Stage Technologies, Inc. API  Useful links: - [Stage](https://www.heystage.com/)",
     "keywords": [
         "openapitools",
